Fixed yellow highlighting behind social media icons on hover

--- a/app/assets/stylesheets/colleges.scss
+++ b/app/assets/stylesheets/colleges.scss
@@ -56,6 +56,14 @@ div.college-show-students {
   }
 }
 
+div.college-social-media-links {
+  a:hover {
+    img {
+      background-color: white;
+    }
+  }
+}
+
 // Containers
 
 div.centered {
